Use docker-compose in github actions

--- a/.github/workflows/bank.yml
+++ b/.github/workflows/bank.yml
@@ -1,22 +1,17 @@
-#
 name: Create and publish a bank connector and frontend
 
-# Configures this workflow to run every time a change is pushed to the branch called release.
 on:
   push:
     branches:
       - 'main'
 
-# Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
-# There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
   build-and-push-image-connector:
     runs-on: ubuntu-latest
-    # Sets the permissions granted to the GITHUB_TOKEN for the actions in this job.
     permissions:
       contents: read
       packages: write
@@ -25,59 +20,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      # Uses the docker/login-action action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
-      - name: Log in to the Container registry
-        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      # This step uses [docker/metadata-action](https://github.com/docker/metadata-action#about) to extract tags and labels that will be applied to the specified image. The id "meta" allows the output of this step to be referenced in a subsequent step. The images value provides the base name for the tags and labels.
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bank_connector
-          tags: |
-            type=schedule
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=sha
-      # Change directory and copy Dockerfile
-      - name: Change directory and copy Dockerfile
-        working-directory: ./src/edc-connector
-        run: cp bank_connector.Dockerfile Dockerfile
-      # This step uses the docker/build-push-action action to build the image, based on your repository's Dockerfile. If the build succeeds, it pushes the image to GitHub Packages.
-      # It uses the context parameter to define the build's context as the set of files located in the specified path. For more information, see "[Usage](https://github.com/docker/build-push-action#usage)" in the README of the docker/build-push-action repository.
-      # It uses the tags and labels parameters to tag and label the image with the output from the "meta" step.
-      - name: Build and push Docker image
-        id: push
-        uses: docker/build-push-action@v4
-        with:
-          context: ./src/edc-connector
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64
-      # This step generates an artifact attestation for the image, which is an unforgeable statement about where and how it was built. It increases supply chain security for people who consume the image. For more information, see "[AUTOTITLE](/actions/security-guides/using-artifact-attestations-to-establish-provenance-for-builds)." 
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v1
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}-bank_connector
-          subject-digest: ${{ steps.push.outputs.digest }}
-          push-to-registry: true
 
-  build-and-push-image-database:
-    runs-on: ubuntu-latest
-    needs: build-and-push-image-connector
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
-      attestations: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
@@ -85,6 +30,62 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Compose
+        run: sudo apt-get update && sudo apt-get install -y docker-compose
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bank_connector
+          tags: |
+            type=schedule
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=sha
+          labels: |
+            com.example.service=bank_connector
+            com.example.version={{version}}
+
+      - name: Build and push Docker image
+	      id: push
+	      working-directory: ./src
+        run: |
+          docker-compose build bank
+          docker tag ${{ env.IMAGE_NAME }}_bank:latest ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bank_connector:${{ steps.meta.outputs.tags }}
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bank_connector:${{ steps.meta.outputs.tags }}
+
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bank_connector
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
+
+  build-and-push-image-database:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
+      attestations: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Compose
+        run: sudo apt-get update && sudo apt-get install -y docker-compose
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -96,22 +97,17 @@ jobs:
             type=ref,event=branch
             type=semver,pattern={{version}}
             type=sha
-
-      - name: Change directory and copy Dockerfile
-        working-directory: ./src/database
-        run: cp bank_database.Dockerfile Dockerfile
+          labels: |
+            com.example.service=bank_database
+            com.example.version={{version}}
 
       - name: Build and push Docker image
-        id: push
-        uses: docker/build-push-action@v4
-        with:
-          context: ./src/database
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64
-          build-args: |
-            RUNNING_ENV=cloud
+	      id: push
+	      working-directory: ./src
+        run: |
+          docker-compose build bank-database
+          docker tag ${{ env.IMAGE_NAME }}_bank-database:latest ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bank_database:${{ steps.meta.outputs.tags }}
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bank_database:${{ steps.meta.outputs.tags }}
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
@@ -122,7 +118,6 @@ jobs:
 
   build-and-push-image-frontend:
     runs-on: ubuntu-latest
-    needs: build-and-push-image-database
     permissions:
       contents: read
       packages: write
@@ -132,12 +127,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Compose
+        run: sudo apt-get update && sudo apt-get install -y docker-compose
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -149,22 +150,17 @@ jobs:
             type=ref,event=branch
             type=semver,pattern={{version}}
             type=sha
-
-      - name: Change directory and copy Dockerfile
-        working-directory: ./src/frontend
-        run: cp bank_frontend.Dockerfile Dockerfile
+          labels: |
+            com.example.service=bank_frontend
+            com.example.version={{version}}
 
       - name: Build and push Docker image
-        id: push
-        uses: docker/build-push-action@v4
-        with:
-          context: ./src/frontend
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64
-          build-args: |
-            RUNNING_ENV=cloud
+	      id: push
+	      working-directory: ./src
+        run: |
+          docker-compose build bank-frontend
+          docker tag ${{ env.IMAGE_NAME }}_bank-frontend:latest ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bank_frontend:${{ steps.meta.outputs.tags }}
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bank_frontend:${{ steps.meta.outputs.tags }}
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
