Changed to multi stage docker files

--- a/src/database/Dockerfile
+++ b/src/database/Dockerfile
@@ -1,12 +1,11 @@
 FROM gradle:jdk17 AS build
 WORKDIR /app
 COPY --chown=gradle:gradle . /app
-
-EXPOSE 8080
-
-ENV CONNECTOR_NAME=bank
-
 RUN ./gradlew build
 
-CMD ["java", "-jar", "build/libs/filestorage-database.jar"]
-
+FROM openjdk:17-alpine
+ENV CONNECTOR_NAME=bank
+WORKDIR /app
+COPY --from=build /app/build/libs/filestorage-database.jar .
+EXPOSE 8080
+CMD ["java", "-jar", "filestorage-database.jar"]
