added agreement id

--- a/src/edc-connector/resources/configuration/tax_advisor-configuration-old.properties
+++ b/src/edc-connector/resources/configuration/tax_advisor-configuration-old.properties
@@ -1,5 +1,6 @@
+edc.api.auth.key=taxadvisor-pass
 edc.participant.id=tax_advisor
-edc.dsp.callback.address=http://localhost:29194/protocol
+edc.dsp.callback.address=http://taxadvisor:29194/protocol
 web.http.port=29191
 web.http.path=/api
 web.http.management.port=29193
