--- a/src/edc-connector/resources/configuration/tax_advisor-configuration.properties
+++ b/src/edc-connector/resources/configuration/tax_advisor-configuration.properties
@@ -1,7 +1,7 @@
 edc.api.auth.key=taxadvisor-pass
 edc.connector.name=tax_advisor
 edc.participant.id=tax_advisor
-edc.dsp.callback.address=http://localhost:19194/protocol
+edc.dsp.callback.address=http://taxadvisor:19194/protocol
 web.http.port=19191
 web.http.path=/connector-api
 web.http.management.port=19193
@@ -17,4 +17,4 @@ web.http.public.port=19291
 web.http.public.path=/public
 web.http.control.port=19192
 web.http.control.path=/control
-edc.dataplane.token.validation.endpoint=http://localhost:19192/control/token
+edc.dataplane.token.validation.endpoint=http://taxadvisor:19192/control/token
