--- a/src/edc-connector/resources/configuration/company-configuration.properties
+++ b/src/edc-connector/resources/configuration/company-configuration.properties
@@ -1,20 +1,25 @@
-edc.api.auth.key=company-pass
 edc.connector.name=company
 edc.participant.id=company
+
+edc.api.auth.key=company-pass
+
 edc.dsp.callback.address=http://company:19194/protocol
+edc.dataplane.api.public.baseurl=http://company:19291/public
+edc.dataplane.token.validation.endpoint=http://company:19192/control/token
+
+edc.keystore=resources/certs/cert.pfx
+edc.keystore.password=123456
+
+edc.transfer.proxy.token.signer.privatekey.alias=private-key
+edc.transfer.proxy.token.verifier.publickey.alias=public-key
+
 web.http.port=19191
 web.http.path=/connector-api
+web.http.control.port=19192
+web.http.control.path=/control
 web.http.management.port=19193
 web.http.management.path=/management
 web.http.protocol.port=19194
 web.http.protocol.path=/protocol
-edc.receiver.http.endpoint=http://localhost:4000/receiver/urn:connector:provider/callback
-edc.public.key.alias=public-key
-edc.transfer.dataplane.token.signer.privatekey.alias=1
-edc.transfer.proxy.token.signer.privatekey.alias=1
-edc.transfer.proxy.token.verifier.publickey.alias=public-key
 web.http.public.port=19291
 web.http.public.path=/public
-web.http.control.port=19192
-web.http.control.path=/control
-edc.dataplane.token.validation.endpoint=http://company:19192/control/token
