--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,7 +19,10 @@
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
-    "socket.io": "^4.7.5"
+    "react-loader-spinner": "^6.1.6",
+    "react-toastify": "^10.0.5",
+    "socket.io": "^4.7.5",
+    "util-deprecate": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
