--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
+    "react-tabs": "^6.0.2",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
