--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "axios": "^1.7.2",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "express": "^4.19.2",
     "js-cookie": "^3.0.5",
