--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -23,7 +23,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-toastify": "^10.0.5",
     "socket.io": "^4.7.5",
-    "util-deprecate": "^1.0.2"
+    "util-deprecate": "^1.0.2",
     "react-tabs": "^6.0.2"
   },
   "devDependencies": {
