Added simple id policy for creating contracts

--- a/src/edc-connector/resources/configuration/company-configuration.properties
+++ b/src/edc-connector/resources/configuration/company-configuration.properties
@@ -1,5 +1,7 @@
 edc.connector.name=company
 edc.participant.id=company
+edc.ids.id=urn:connector:company
+edc.mock.role=company
 
 edc.api.auth.key=company-pass
 
