--- a/src/edc-connector/resources/configuration/tax_advisor-configuration.properties
+++ b/src/edc-connector/resources/configuration/tax_advisor-configuration.properties
@@ -1,5 +1,7 @@
 edc.connector.name=taxadvisor
 edc.participant.id=taxadvisor
+edc.ids.id=urn:connector:taxadvisor
+edc.mock.role=taxadvisor
 
 edc.api.auth.key=taxadvisor-pass
 
